src/test/ui/pattern/usefulness/top-level-alternation.stderr
error: unreachable pattern
  --> $DIR/top-level-alternation.rs:6:23
   |
LL |     while let 0..=2 | 1 = 0 {}
   |                       ^
   |
note: the lint level is defined here
  --> $DIR/top-level-alternation.rs:3:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/top-level-alternation.rs:7:20
   |
LL |     if let 0..=2 | 1 = 0 {}
   |                    ^

error: unreachable pattern
  --> $DIR/top-level-alternation.rs:11:15
   |
LL |             | 0 => {}
   |               ^

error: unreachable pattern
  --> $DIR/top-level-alternation.rs:16:15
   |
LL |             | Some(0) => {}
   |               ^^^^^^^

error: unreachable pattern
  --> $DIR/top-level-alternation.rs:21:9
   |
LL |         (0, 0) => {}
   |         ^^^^^^

error: unreachable pattern
  --> $DIR/top-level-alternation.rs:41:9
   |
LL |         _ => {}
   |         ^

error: unreachable pattern
  --> $DIR/top-level-alternation.rs:45:9
   |
LL |         Some(_) => {}
   |         ^^^^^^^

error: unreachable pattern
  --> $DIR/top-level-alternation.rs:46:9
   |
LL |         None => {}
   |         ^^^^

error: unreachable pattern
  --> $DIR/top-level-alternation.rs:51:9
   |
LL |         None | Some(_) => {}
   |         ^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/top-level-alternation.rs:55:9
   |
LL |         1..=2 => {},
   |         ^^^^^

error: unreachable pattern
  --> $DIR/top-level-alternation.rs:58:14
   |
LL |     let (0 | 0) = 0 else { return };
   |              ^

error: aborting due to 11 previous errors

